--- a/block-BHaaci/assets/stylesheet/style.css
+++ b/block-BHaaci/assets/stylesheet/style.css
@@ -51,7 +51,7 @@ table {
 body{
     width: 100%;
     height: 900px;
-    background: linear-gradient( #ff000087, #ff00008e), url(../media/bg-intro-desktop.png) ;
+    background: linear-gradient( #ff000087, #ff00008e), url(../media/bg-intro-desktop.png) no-repeat;
   background-size: cover;
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
